--- a/public/assets/user/css/style.css
+++ b/public/assets/user/css/style.css
@@ -483,12 +483,13 @@ input:-webkit-autofill:focus {
 =============================================
 ***/
 .mainmeu-area {
-    margin-bottom: -36px;
-    margin-top: -39px;
+    /* margin-bottom: -36px; */
+    /* margin-top: -39px; */
     position: relative;
     -webkit-transition: all 0.5s ease 0s;
     transition: all 0.5s ease 0s;
     z-index: 9999;
+    background: #E4985B;
 }
 
 .mainmeu-area .container {
@@ -510,6 +511,8 @@ input:-webkit-autofill:focus {
     float: left;
     margin: 0px;
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    align-items: center;
 }
 
 .main-menu .navigation li {
@@ -525,7 +528,7 @@ input:-webkit-autofill:focus {
     font-weight: 700;
     line-height: 20px;
     opacity: 1;
-    padding: 28px 17px 27px 0;
+    padding: 10px 0;
     position: relative;
     text-transform: uppercase;
     transition: all 500ms ease;
