--- a/public/assets/user/css/responsive.css
+++ b/public/assets/user/css/responsive.css
@@ -1256,6 +1256,7 @@
   float:none !important;
   margin:0px !important;
   width:100% !important;
+  flex-direction: column;
 }
 .main-menu .navbar-collapse > .navigation > li{
   margin:0px !important;
@@ -1328,7 +1329,7 @@
 .main-menu .navbar-collapse > .navigation > li:hover > a,
 .main-menu .navbar-collapse > .navigation > li > ul > li:hover > a,
 .main-menu .navbar-collapse > .navigation > li.current > a{
-  background:#f39c57;
+  background:#ffffff;
   color:#160f09 !important;
   box-shadow: 1px 0 1px #fff;
 }	
@@ -1378,6 +1379,7 @@
 ***/
 .statistic-area {
   padding-bottom: 60px;
+  padding-top: 60px;
 }    
 .statistic-area .single-statistic-item .content {
   margin: 0 0 50px;
